<resources>
    <string name="app_name">GMS</string>
    <string name="place_holder">Place holder</string>
    <string name="short_place_holder">holder</string>
    <string name="long_place_holder">Place holder Place holder Place holder
        Place holder Place holder Place holder
        Place holder Place holder Place holder
        Place holder Place holder Place holder </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="aqel_name">Aqel Name</string>
    <string name="agent_name">Agent Name</string>
    <string name="station_name">station Name</string>01
    <string name="cotroler_header_card_view">hide</string>
    <string name="preferences_dark_light_mode_selected_key" translatable="false">dark light mode</string>
    <string-array name="items_array">
        <item>AL_kornish</item>
        <item>Mousa Street</item>
        <item>AL_medinah</item>
        <item>AL_hawak square</item>
    </string-array>
    <string name="need_scan">Need Scan</string>
    <string name="verified">Verified</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="first_name">first name</string>
    <string name="second_name">second name</string>
    <string name="last_name">last name</string>
    <string name="family_member">family member</string>
    <string name="cylinders_qty">cylinders qty</string>
    <string name="neighborhood_name">neighborhood name</string>
    <string name="take_shot_document">take picture for document</string>
    <string name="information">information</string>
    <string name="address">Address : </string>
    <string name="phone_number">phone number</string>
    <string name="okay">okay</string>
    <string name="see_document">See document</string>
    <string name="confirm">Confirm</string>
    <string name="regret">Regret</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="change_some_information_of_account">change some information of account</string>
    <string name="notifications">Notifications</string>
    <string name="change_some_informations_of_notificaions">change some informations of notificaions</string>
    <string name="app_behavior">App behavior</string>
    <string name="change_style_and_theme_of_app">change style and theme of app</string>
    <string name="help">Help</string>
    <string name="help_you_to_understand_the_app">help you to understand the app</string>
    <string name="qty">Qty</string>
    <string name="total">total : </string>
    <string name="accept">Accept</string>
    <string name="hide">hide</string>
    <string name="show">show</string>
    <string name="cylinders">cylinders : </string>
    <string name="station">Station</string>
    <string name="history">History</string>
    <string name="cylinder_receive">Cylinder Receive</string>
    <string name="add_citizen">Add citizen</string>
    <string name="details">Details</string>
    <string name="representative">Representative : </string>
    <string name="name">Name : </string>
    <string name="mobile">Mobile : </string>
    <string name="agent">Agent : </string>
    <string name="day_and_time">Day and Time :</string>
    <string name="date">Date :</string>
    <string name="receiving" translatable="false">Have you token all the money</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="error" translatable="false">Error !</string>
    <string name="done" translatable="false">done</string>
    <string name="chose_image">please, check a document picture</string>
    <string name="fill_all_fields">please, fill all fields then send</string>

    <string name="title_activity_employees_signup_requests">EmployeesSignupRequestsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_data_as_json">user data as json</string>
    <string name="sign_in_state">sign in state</string>
    <string name="agent_text">Agent</string>
    <string name="representative_text">Representative</string>
    <string name="aqel_text">Aqel</string>
    <string name="log_out">log out</string>
    <string name="search">search</string>
    <string name="actions">Actions</string>
    <string name="employees">Employees</string>
    <string name="stations">Stations</string>
    <string name="change_theme">change theme</string>
    <string name="map">Map</string>
    <string name="change_price">Change price</string>
    <string name="representative_name">Representative name</string>
    <string name="edit">Edit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="delete">delete</string>
    <string name="price">price</string>
    <string name="serial_number">serial number</string>
    <string name="no_item_yet">there is no item yet</string>
    <string name="no_action_yet">there is no action</string>
</resources>