<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/general_search_item"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/station_item"
        android:title="@string/station"
        app:showAsAction="never" />
    <item
        android:id="@+id/history_item"
        android:title="@string/history"
        app:showAsAction="never" />
    <item
        android:id="@+id/cylinder_recieve_item"
        android:title="@string/cylinder_receive"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting_item"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_agent_item_log_out"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>