<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/aqel_search_ic"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification_addition"
        android:title="notification addition"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_citizen"
        android:title="@string/add_citizen"
        app:showAsAction="never" />

    <item
        android:id="@+id/setting_item"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>