<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aqel.activities.AqelNotificationsActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar_notifications"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/top_bar_agent_shape"
            android:foregroundTint="@color/white"
            app:title="@string/notifications"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_app_bar_layout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/date"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_day_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_and_time"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_date"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        />
    <TextView
        android:id="@+id/tv_title_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/representative"
        app:layout_constraintTop_toBottomOf="@id/tv_day_time"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_rep_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_rep"
        app:layout_constraintStart_toStartOf="@id/tv_title_rep"
        android:layout_marginStart="32dp"
        />
    <TextView
        android:id="@+id/tv_rep_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rep_name"
        app:layout_constraintStart_toStartOf="@id/tv_rep_name"
        />
    <TextView
        android:id="@+id/tv_rep_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+967734157397"
        android:inputType="phone"
        android:clickable="true"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/tv_rep_mobile"
        app:layout_constraintTop_toTopOf="@id/tv_rep_mobile"
        app:layout_constraintBottom_toBottomOf="@id/tv_rep_mobile"
        />
        <View
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/view_shape"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/light_charcoal"
            app:layout_constraintTop_toBottomOf="@id/tv_rep_mobile"
           app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />
    <TextView
        android:id="@+id/tv_title_agent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agent"
        app:layout_constraintTop_toBottomOf="@id/view_separator"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tv_agent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_agent"
        app:layout_constraintStart_toStartOf="@id/tv_title_agent"
        android:layout_marginStart="32dp"
        />
    <TextView
        android:id="@+id/tv_agent_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agent_name"
        app:layout_constraintStart_toStartOf="@id/tv_agent_name"
        />
    <TextView
        android:id="@+id/tv_agent_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+967734157397"
        android:inputType="phone"
        android:clickable="true"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@id/tv_agent_mobile"
        app:layout_constraintTop_toTopOf="@id/tv_agent_mobile"
        app:layout_constraintBottom_toBottomOf="@id/tv_agent_mobile"
        />

</androidx.constraintlayout.widget.ConstraintLayout>