<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="160dp"
    android:layout_gravity="center"
    android:background="@drawable/round_corner_shape">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toStartOf="@+id/close_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/close_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:backgroundTint="#ffffffff"
        android:elevation="0dp"
        android:src="@drawable/cancel_icon"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp"
        app:layout_collapseMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_title_dialog"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/receiving"
        app:counterMaxLength="2"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog"/>

    <TextView
        android:id="@+id/tv_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/accept"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="@color/Charcoal"
        android:text="@string/cancel"
        android:background="@color/transparent"
        app:layout_constraintStart_toEndOf="@id/tv_accept"
        app:layout_constraintTop_toTopOf="@id/tv_accept"
        app:layout_constraintBottom_toBottomOf="@id/tv_accept"

        />
</androidx.constraintlayout.widget.ConstraintLayout>