<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/round_corner_shape">

    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:indeterminateOnly="false"
        android:progress="80"
        android:progressDrawable="@drawable/circle_progress"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0%"
        app:layout_constraintBottom_toBottomOf="@id/progress_loading"
        app:layout_constraintEnd_toEndOf="@id/progress_loading"
        app:layout_constraintStart_toStartOf="@id/progress_loading"
        app:layout_constraintTop_toTopOf="@id/progress_loading" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/progress_loading"
        app:layout_constraintStart_toStartOf="@id/progress_loading"
        app:layout_constraintTop_toBottomOf="@id/progress_loading" />

    <Button
        android:id="@+id/btn_okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_error"
        app:layout_constraintStart_toStartOf="@id/tv_error"
        app:layout_constraintTop_toBottomOf="@id/tv_error" />
</androidx.constraintlayout.widget.ConstraintLayout>